[gd_scene load_steps=8 format=3 uid="uid://xo8c7pwbtbu6"]

[ext_resource type="Script" uid="uid://dcngc8o2gvopb" path="res://player_menu.gd" id="1_sdn3m"]
[ext_resource type="Texture2D" uid="uid://bj3ikbgirhn87" path="res://imgs/menu/BlueBackground.png" id="1_xf8rw"]
[ext_resource type="Texture2D" uid="uid://db3gkm6xdh6nn" path="res://imgs/menu/BlueButton.png" id="2_sdn3m"]
[ext_resource type="Texture2D" uid="uid://cx0p5ywt00afr" path="res://imgs/menu/GreenButton.png" id="3_rwwts"]
[ext_resource type="Texture2D" uid="uid://drul3cvlb450w" path="res://imgs/menu/PurpleButton.png" id="4_lb1ib"]
[ext_resource type="Texture2D" uid="uid://c6xc1sskqvruq" path="res://imgs/menu/RedButton.png" id="5_cgbcs"]

[sub_resource type="LabelSettings" id="LabelSettings_xox0g"]
line_spacing = 0.0
font_size = 60
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="Node" type="Node"]
script = ExtResource("1_sdn3m")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_xf8rw")

[node name="PlayerOneJoinButton" type="TextureButton" parent="."]
offset_left = 172.0
offset_top = 758.0
offset_right = 311.0
offset_bottom = 894.0
texture_normal = ExtResource("2_sdn3m")

[node name="PlayerOneLabel" type="Label" parent="PlayerOneJoinButton"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.021
anchor_bottom = 0.021
offset_left = -38.0
offset_top = 161.0
offset_right = 463.68
offset_bottom = 331.32
text = "Player 1"
label_settings = SubResource("LabelSettings_xox0g")

[node name="PlayerTwoJoinButton" type="TextureButton" parent="."]
offset_left = 584.0
offset_top = 753.0
offset_right = 723.0
offset_bottom = 889.0
texture_normal = ExtResource("3_rwwts")

[node name="PlayerTwoLabel" type="Label" parent="PlayerTwoJoinButton"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.021
anchor_bottom = 0.021
offset_left = -49.0
offset_top = 170.0
offset_right = 452.68
offset_bottom = 340.32
text = "Player 2
"
label_settings = SubResource("LabelSettings_xox0g")

[node name="PlayerThreeJoinButton" type="TextureButton" parent="."]
offset_left = 1043.0
offset_top = 753.0
offset_right = 1182.0
offset_bottom = 889.0
texture_normal = ExtResource("4_lb1ib")

[node name="PlayerThreeLabel" type="Label" parent="PlayerThreeJoinButton"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.021
anchor_bottom = 0.021
offset_left = -60.0
offset_top = 175.0
offset_right = 441.68
offset_bottom = 345.32
text = "Player 3
"
label_settings = SubResource("LabelSettings_xox0g")

[node name="PlayerFourJoinButton" type="TextureButton" parent="."]
offset_left = 1468.0
offset_top = 763.0
offset_right = 1607.0
offset_bottom = 899.0
texture_normal = ExtResource("5_cgbcs")

[node name="PlayerFourLabel" type="Label" parent="PlayerFourJoinButton"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.021
anchor_bottom = 0.021
offset_left = -59.0
offset_top = 177.0
offset_right = 442.68
offset_bottom = 347.32
text = "Player 4
"
label_settings = SubResource("LabelSettings_xox0g")
